nvim + hyprland changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -61,6 +61,7 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = HYPRSHOT_DIR,Pictures/screenshots
+env = TERM,wezterm
 
 #####################
 ### LOOK AND FEEL ###
