--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,7 +49,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = hyprpaper & waybar & hypridle
+exec-once = hyprpaper & hyprpanel & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
