monochrome theme wip

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,8 +1,9 @@
-preload = ~/.config/hypr/minimalist_night.jpg
 preload = ~/.config/hypr/aesthetic.jpg
+preload = ~/.config/hypr/kanagawa.jpg
+preload = ~/.config/hypr/musashi.png
 
-wallpaper = ,~/.config/hypr/aesthetic.jpg
-
+# wallpaper = ,~/.config/hypr/aesthetic.jpg
+wallpaper = ,~/.config/hypr/musashi.png
 
 
 ipc = off
