hyprpanel monochrome, rest rose-pine-dawn

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,7 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 source = ~/.config/hypr/frappe.conf
+source = ~/.config/hypr/rose-pine-dawn.conf
 
 
 ################
@@ -81,8 +82,15 @@ general {
     border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $blue
-    col.inactive_border = $surface0
+
+    # catppuccin frappe
+    # col.active_border = $blue
+    # col.inactive_border = $surface0
+
+    # rose-pine-dawn
+    col.active_border = $rose
+    col.inactive_border = $muted
+    
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true 
 
@@ -151,6 +159,7 @@ misc {
     disable_splash_rendering = true
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
+    focus_on_activate = true
 }
 
 
