--- a/hyprpanel/config.json
+++ b/hyprpanel/config.json
@@ -116,9 +116,9 @@
   "theme.bar.menus.menu.battery.border.color": "#333333",
   "theme.bar.menus.menu.battery.background.color": "#000000",
   "theme.bar.menus.menu.battery.card.color": "#111111",
-  "theme.bar.menus.menu.systray.dropdownmenu.divider": "#1A1A1A",
-  "theme.bar.menus.menu.systray.dropdownmenu.text": "#CCCCCC",
-  "theme.bar.menus.menu.systray.dropdownmenu.background": "#000000",
+  "theme.bar.menus.menu.systray.dropdownmenu.divider": "#1a1a1a",
+  "theme.bar.menus.menu.systray.dropdownmenu.text": "#000000",
+  "theme.bar.menus.menu.systray.dropdownmenu.background": "#ffffff",
   "theme.bar.menus.menu.bluetooth.iconbutton.active": "#ffffff",
   "theme.bar.menus.menu.bluetooth.iconbutton.passive": "#9a9996",
   "theme.bar.menus.menu.bluetooth.icons.active": "#ffffff",
@@ -347,7 +347,7 @@
   "theme.bar.menus.menu.network.switch.disabled": "#444444",
   "theme.bar.menus.menu.network.switch.puck": "#333333",
   "theme.bar.buttons.systray.customIcon": "#FFFFFF",
-  "theme.bar.border.color": "#FFFFFF",
+  "theme.bar.border.color": "#f6f5f4",
   "theme.bar.menus.menu.media.timestamp": "#FFFFFF",
   "theme.bar.buttons.borderColor": "#FFFFFF",
   "theme.bar.buttons.modules.hyprsunset.icon": "#090909",
