--- a/ghostty/config
+++ b/ghostty/config
@@ -41,3 +41,4 @@
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
+theme = rose-pine-dawn 
