--- a/ghostty/config
+++ b/ghostty/config
@@ -42,3 +42,6 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 theme = rose-pine-dawn 
+font-family = "0xProto Nerd Font"
+shell-integration = fish
+command = /usr/bin/fish --login --interactive
