--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,7 +36,8 @@ monitor = DP-2, preferred, -1920x-1080,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
+# $terminal = wezterm
+$terminal = ghostty
 $fileManager = nemo
 $menu = wofi --show drun
 
