--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,7 @@ source = ~/.config/hypr/rose-pine-dawn.conf
 monitor = ,preferred,auto,1
 monitor = eDP-1, preferred, 0x0,1
 monitor = HDMI-A-1, 1920x1080, 0x-1080,1 
+monitor = HDMI-A-2, 1920x1080, 0x-1080,1 
 monitor = DP-2, preferred, -1920x-1080,1
 
 ###################
