--- a/ghostty/config
+++ b/ghostty/config
@@ -41,7 +41,8 @@
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
-theme = rose-pine-dawn 
-font-family = "0xProto Nerd Font"
+theme = Rose Pine Dawn
+# font-family = "0xProto Nerd Font"
+font-family = "Fira Code Nerd Font"
 shell-integration = fish
 command = /usr/bin/fish --login --interactive
