--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -53,6 +53,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = hyprpaper & hyprpanel & hypridle
+exec-once = hyprpm reload -n
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
@@ -198,9 +199,7 @@ device {
 } 
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
+gesture = 3, horizontal, workspace
 
 
 ###################
@@ -228,8 +227,8 @@ bind = $mainMod, H, cyclenext
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-bind = $mainMod, F4, exec, wlogout
-
+bind = $mainMod, R, exec, wlogout
+bind = $mainMod, g, hyprexpo:expo, toggle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
