--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -55,7 +55,6 @@ $menu = wofi --show drun
 exec-once = hyprpaper & hyprpanel & hypridle
 exec-once = hyprpm reload -n
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 ############################ ## ENVIRONMENT VARIABLES ### ############################
 
@@ -65,7 +64,7 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = HYPRSHOT_DIR,Pictures/screenshots
-env = TERM,wezterm
+env = TERM,ghostty
 
 #####################
 ### LOOK AND FEEL ###
