--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,23 +1,89 @@
+# Prefix and key bindings
+unbind M-Space
+set -g prefix M-Space
+bind M-Space send-prefix
 
-# Options to make tmux more pleasant
+# Reload config quickly
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+bind c new-window -c "#{pane_current_path}"
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+bind -n M-| split-window -h
+bind -n M-- split-window -v
+unbind '"'
+unbind %
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+# Resize panes with Alt-H/J/K/L (vi style)
+bind -n M-H resize-pane -L 1
+bind -n M-L resize-pane -R 1
+bind -n M-K resize-pane -U 1
+bind -n M-J resize-pane -D 1
+
+unbind M-a
+bind -n M-a select-pane -t :.+ 
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy && wl-paste -n | wl-copy -p"
+bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
+
+# Status bar always on
+set -g status on
+# vi bindings for copy mode
+setw -g mode-keys vi
+
+# Terminal / mouse
 set -g mouse on
 set -g default-terminal "tmux-256color"
+set-option -g default-shell /usr/bin/fish
+set-option -g history-limit 3000
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "latte"
-set -g @catppuccin_window_status_style "rounded"
+set-option -g allow-passthrough on
 
-# Load catppuccin
-run ~/.config/tmux/plugins/cat/catppuccin.tmux
-# For TPM, instead use `run ~/.tmux/plugins/tmux/catppuccin.tmux`
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'rose-pine/tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-set -g default-command fish
+# Theme variant
+set -g @rose_pine_variant 'dawn'
+
+# Status line elements like lualine
+set -g @rose_pine_only_windows 'off'          # show full status line
+set -g @rose_pine_show_current_program 'on'   # show current program
+set -g @rose_pine_show_pane_directory 'on'    # show current directory
+set -g @rose_pine_user 'on'                   # username
+set -g @rose_pine_host 'on'                   # hostname
+set -g @rose_pine_hostname_short 'on'         # short hostname
+set -g @rose_pine_date_time_icon '󰃰'
+set -g @rose_pine_date_time '%H:%M'           # 24h format like lualine
+set -g @rose_pine_bar_bg_disable 'off'        # colored background
+
+# Separators
+set -g @rose_pine_left_separator ' > '   # lualine-like left separator
+set -g @rose_pine_right_separator ' < '  # lualine-like right separator
+set -g @rose_pine_field_separator ' | '   # fields separator
+set -g @rose_pine_window_separator ' - '  # between windows
+
+# Icons
+set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
+set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
+set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
+set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
+set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
+set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
+set -g @rose_pine_window_status_separator " | " # Changes the default icon that appears between window names
+
+# Initialize TPM
+run '~/.config/tmux/plugins/tpm/tpm'
