--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,8 @@ bind -n M-- split-window -v
 unbind '"'
 unbind %
 
+bind Space last-window
+
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -28,6 +30,9 @@ bind -n M-H resize-pane -L 1
 bind -n M-L resize-pane -R 1
 bind -n M-K resize-pane -U 1
 bind -n M-J resize-pane -D 1
+
+bind -r "<" swap-window -d -t -1
+bind -r ">" swap-window -d -t +1
 
 unbind M-a
 bind -n M-a select-pane -t :.+ 
@@ -56,8 +61,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin '2kabhishek/tmux2k'
+set-option -g @plugin 'b0o/tmux-autoreload'
 
-# set -g @tmux2k_theme 'duo'
+# set -g @tmux2k_theme 'catppuccin'
+# set -g @tmux2k-icons-only true
 # set -g @tmux2k_show_time 'on'
 # set -g @tmux2k_show_battery 'on'
 
