--- a/waybar.rose/config.jsonc
+++ b/waybar.rose/config.jsonc
@@ -4,7 +4,7 @@
     "height": 25,
     "spacing": 2,
     "modules-left": [
-        // "hyprland/workspaces",
+        "hyprland/workspaces",
         "mpris"
     ],
     "modules-center": [
