--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,12 +9,18 @@ bind c new-window -c "#{pane_current_path}"
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
+bind x split-window -h
+bind -n M-x split-window -h
 bind -n M-| split-window -h
 bind -n M-- split-window -v
 unbind '"'
 unbind %
 
 bind Space last-window
+
+# Also allow Alt-p / Alt-n for previous/next window
+bind -n M-p previous-window
+bind -n M-n next-window
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
